[tool.poetry]
name = "smp"
version = "0"
description = "Simple Management Protocol (SMP) for remotely managing MCU firmware"
authors = [
    "J.P. Hutchins <jphutchins@gmail.com>",
    "J.P. Hutchins <jp@intercreate.io>"
]
readme = "README.md"
license = "Apache-2.0"
packages = [
    { include = "smp" },
]

[tool.poetry-version-plugin]
source = "git-tag"

[tool.poetry.dependencies]
python = ">=3.8.1, <3.13"
cbor2 = "^5.5.1"
crcmod = "^1.7"
pydantic = "^2.6"
eval-type-backport = { version = "^0.2.0", python = "<3.10"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.7.0"
mypy-extensions = "^1.0.0"
pytest-xdist = "^3.4.0"
tox = "^4.15.0"

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
disallow_untyped_defs = true
exclude = ['.venv']

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:The --rsyncdir:DeprecationWarning",
]

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.15
    env_list =
        py38
        py39
        py310
        py311
        py312

    [testenv]
    allowlist_externals =
        poetry
        black
        isort
        flake8
        mypy
        coverage
    commands = 
        poetry install
        black --check .
        isort --check-only .
        flake8 .
        mypy .
        coverage erase
        pytest --cov --maxfail=3 -n auto
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
